--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-insets:0.24.3-alpha"
     implementation "com.google.accompanist:accompanist-insets-ui:0.24.3-alpha"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.3-alpha"
+    implementation "com.google.accompanist:accompanist-pager:0.24.3-alpha"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.24.3-alpha"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+    implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
