--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'io.coil-kt:coil-compose:2.0.0-rc01'
+    implementation 'io.coil-kt:coil:2.0.0-rc01'
     implementation "com.google.accompanist:accompanist-insets:0.24.3-alpha"
     implementation "com.google.accompanist:accompanist-insets-ui:0.24.3-alpha"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.3-alpha"
@@ -61,6 +62,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.24.3-alpha"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
