--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,15 +55,19 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'io.coil-kt:coil-compose:2.0.0-rc01'
     implementation 'io.coil-kt:coil:2.0.0-rc01'
-    implementation "com.google.accompanist:accompanist-insets:0.24.3-alpha"
-    implementation "com.google.accompanist:accompanist-insets-ui:0.24.3-alpha"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.3-alpha"
-    implementation "com.google.accompanist:accompanist-pager:0.24.3-alpha"
-    implementation "com.google.accompanist:accompanist-pager-indicators:0.24.3-alpha"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+
+    implementation "com.google.accompanist:accompanist-insets:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-insets-ui:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-pager:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-placeholder-material:$accompanistVersion"
+    implementation "com.google.accompanist:accompanist-placeholder:$accompanistVersion"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
