--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.1.1'
+        accompanistVersion = '0.24.3-alpha'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
