--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,12 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        renderscriptTargetApi 22
+        renderscriptSupportModeEnabled false
     }
+
+    ndkVersion '21.0.6113669'
 
     buildTypes {
         release {
