--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 buildscript {
     ext {
         compose_version = '1.1.1'
-        accompanistVersion = '0.24.3-alpha'
+        accompanist_version = '0.24.3-alpha'
+        hilt_version = '2.38.1'
+    }
+    dependencies {
+        classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
