--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     implementation 'io.coil-kt:coil-compose:2.0.0-rc01'
     implementation 'io.coil-kt:coil:2.0.0-rc01'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
-    implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
+    implementation "androidx.navigation:navigation-compose:2.5.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-beta01"
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -83,6 +84,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
     implementation "com.google.accompanist:accompanist-placeholder:$accompanist_version"
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
+
+    kapt "com.google.dagger:hilt-compiler:2.40.5"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
