--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,11 @@ dependencies {
     kapt("androidx.hilt:hilt-compiler:1.0.0")
     implementation 'androidx.hilt:hilt-work:1.0.0'
 
+    implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.17.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
