--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,11 +60,12 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'io.coil-kt:coil-compose:2.0.0-rc01'
     implementation 'io.coil-kt:coil:2.0.0-rc01'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
-    implementation "androidx.navigation:navigation-compose:2.5.0-beta01"
+    implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-beta01"
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
@@ -74,7 +75,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
     implementation "com.google.accompanist:accompanist-insets-ui:$accompanist_version"
